--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -30,4 +30,53 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+/* My changes start from here */
+
+body{
+  background-color: black;
+  min-height: 100%;
+  max-height: 100vh;
+  overflow: hidden;
 }
+
+.Container {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: 1fr 3fr;
+  grid-template-areas: "header sidebar"
+                       "main sidebar";
+  
+  background-color:red;
+  height: 100vh; 
+}
+
+.statsBarContainer{
+  grid-area: header;
+  background-color: yellow;
+  padding: 0;
+ 
+}
+
+.purchaseDetailsContainer{
+  grid-area: sidebar;
+  background-color: blue;
+  padding: 0%;
+ 
+}
+
+.graphContainer{
+  grid-area: main;
+  background-color: green;
+  padding: 5%;
+ 
+}
+
+
+
+.item{
+  background-color: white;
+}
+
+
